Added predictions on test data

--- a/Assignment 2/Natural.ipynb
+++ b/Assignment 2/Natural.ipynb
@@ -2,44 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
+   "id": "organized-feedback",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-67-8a5c28967f04>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimage\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import datasets, models, layers\n",
     "from sklearn.model_selection import train_test_split\n",
     "import wandb\n",
     "from wandb.keras import WandbCallback\n",
-    "from matplotlib import image\n",
+    "from matplotlib import pyplot, image\n",
     "import os\n",
     "import numpy as np\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "requested-friday",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.config.list_physical_devices('GPU')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "id": "vietnamese-renewal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "resident-providence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "driving-voltage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ethical-bridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
+   "id": "realistic-notice",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found 9999 images belonging to 10 classes.\n",
       "Found 9000 images belonging to 10 classes.\n",
       "Found 999 images belonging to 10 classes.\n",
       "Found 2000 images belonging to 10 classes.\n"
@@ -154,6 +164,10 @@
     "\n",
     "data_test = ImageDataGenerator()#rescale = 1. / 255)\n",
     "\n",
+    "full_train_generator = ImageDataGenerator().flow_from_directory(\n",
+    "        train_path,\n",
+    "        class_mode='categorical')\n",
+    "\n",
     "train_generator = data_train.flow_from_directory(\n",
     "        train_path,\n",
     "        class_mode='categorical',\n",
@@ -166,12 +180,14 @@
     "\n",
     "test_generator = data_test.flow_from_directory(\n",
     "        test_path,\n",
-    "        class_mode='categorical')"
+    "        class_mode='categorical',\n",
+    "        shuffle = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "competitive-remains",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "baking-surfing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,25 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "defined-meeting",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Create sweep with ID: 42eow1pj\n",
-      "Sweep URL: https://wandb.ai/0x2e4/cs6910-a2/sweeps/42eow1pj\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sweep_id = wandb.sweep(sweep_config, entity = '0x2e4', project = 'cs6910-a2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "ethical-length",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,52 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "jewish-component",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "wandb: Agent Starting Run: 6ajzk6b9 with config:\n",
-      "wandb: \tbatch_normalize: False\n",
-      "wandb: \tdata_augment: False\n",
-      "wandb: \tdropout: 0.4\n",
-      "wandb: \tfilter_size: 3\n",
-      "wandb: \tfilter_size_decay: 1\n",
-      "wandb: \tn_dense: 100\n",
-      "wandb: \tn_filters: 32\n",
-      "wandb: Currently logged in as: 0x2e4 (use `wandb login --relogin` to force relogin)\n",
-      "wandb: WARNING Ignored wandb.init() arg project when running a sweep\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                Tracking run with wandb version 0.10.21<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">polar-sweep-1</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/0x2e4/cs6910-a2\" target=\"_blank\">https://wandb.ai/0x2e4/cs6910-a2</a><br/>\n",
-       "                Sweep page: <a href=\"https://wandb.ai/0x2e4/cs6910-a2/sweeps/42eow1pj\" target=\"_blank\">https://wandb.ai/0x2e4/cs6910-a2/sweeps/42eow1pj</a><br/>\n",
-       "Run page: <a href=\"https://wandb.ai/0x2e4/cs6910-a2/runs/6ajzk6b9\" target=\"_blank\">https://wandb.ai/0x2e4/cs6910-a2/runs/6ajzk6b9</a><br/>\n",
-       "                Run data is saved locally in <code>C:\\Users\\Shriram\\Documents\\GitHub\\DeepLearning\\Assignment 2\\wandb\\run-20210407_234205-6ajzk6b9</code><br/><br/>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "144/282 [==============>...............] - ETA: 3:25 - loss: 11.7345 - accuracy: 0.1006"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wandb.agent(sweep_id, run)"
    ]
@@ -313,6 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "convenient-benchmark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,6 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "governmental-nepal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,6 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "monthly-winter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "secondary-hunter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,6 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acute-tracy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "immediate-lecture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,9 +369,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "likely-ribbon",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_4\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "batch_normalization (BatchNo (None, 256, 256, 3)       12        \n",
+      "_________________________________________________________________\n",
+      "conv2d_10 (Conv2D)           (None, 254, 254, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_10 (MaxPooling (None, 127, 127, 32)      0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 127, 127, 32)      128       \n",
+      "_________________________________________________________________\n",
+      "conv2d_11 (Conv2D)           (None, 125, 125, 32)      9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_11 (MaxPooling (None, 62, 62, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 62, 62, 32)        128       \n",
+      "_________________________________________________________________\n",
+      "conv2d_12 (Conv2D)           (None, 60, 60, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_12 (MaxPooling (None, 30, 30, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 30, 30, 32)        128       \n",
+      "_________________________________________________________________\n",
+      "conv2d_13 (Conv2D)           (None, 28, 28, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_13 (MaxPooling (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 14, 14, 32)        128       \n",
+      "_________________________________________________________________\n",
+      "conv2d_14 (Conv2D)           (None, 12, 12, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_14 (MaxPooling (None, 6, 6, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 1152)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 100)               115300    \n",
+      "_________________________________________________________________\n",
+      "dense_5 (Dense)              (None, 10)                1010      \n",
+      "=================================================================\n",
+      "Total params: 154,722\n",
+      "Trainable params: 154,460\n",
+      "Non-trainable params: 262\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -406,6 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "indirect-encyclopedia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,42 +447,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
+   "id": "seeing-ranch",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "313/313 [==============================] - 159s 507ms/step - loss: 2.7122 - accuracy: 0.1682\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "an integer is required (got type str)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-c419be8b65ee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'foo(5)'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-8-19b45d46c05c>\u001b[0m in \u001b[0;36mfoo\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfoo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: an integer is required (got type str)"
-     ]
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1f7a996ad90>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "best_model = createCNN(n_filters = 32, filter_size = 3, n_dense = 100, num_conv_layers = 5, input_shape = max_shape, activation = 'relu', n_output = 10, filter_size_decay = 1.15, data_augment = True)\n",
+    "best_model.compile(optimizer = tf.keras.optimizers.Nadam(), loss = tf.keras.losses.CategoricalCrossentropy(from_logits=True), metrics = ['accuracy'])\n",
+    "best_model.fit(full_train_generator, epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "sealed-connectivity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_l = best_model.predict(test_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "harmful-triumph",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = y_pred_l.argmax(axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "voluntary-politics",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true = np.array([np.zeros(200) + ii for ii in range(0, 10)]).flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "periodic-favorite",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1965"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(y_pred == y_true).sum() / 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "reasonable-worker",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: Currently logged in as: 0x2e4 (use `wandb login --relogin` to force relogin)\n",
+      "wandb: wandb version 0.10.25 is available!  To upgrade, please run:\n",
+      "wandb:  $ pip install wandb --upgrade\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Tracking run with wandb version 0.10.21<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">generous-eon-1</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/0x2e4/DeepLearning-Assignment%202\" target=\"_blank\">https://wandb.ai/0x2e4/DeepLearning-Assignment%202</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/0x2e4/DeepLearning-Assignment%202/runs/1yq2or9d\" target=\"_blank\">https://wandb.ai/0x2e4/DeepLearning-Assignment%202/runs/1yq2or9d</a><br/>\n",
+       "                Run data is saved locally in <code>C:\\Users\\R Raghu Raman\\Desktop\\cs6910\\DeepLearning\\Assignment 2\\wandb\\run-20210409_233808-1yq2or9d</code><br/><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wandb.init()\n",
+    "for some in os.listdir(test_path):\n",
+    "    idx = test_generator.class_indices[some]\n",
+    "    new_path = test_path + \"/\" + some\n",
+    "    img_path = new_path + \"/\" + os.listdir(new_path)[0]\n",
+    "    img = tf.keras.preprocessing.image.load_img(img_path)\n",
+    "    wandb.log({'img': wandb.Image(img, caption='Set ' + str(idx)),'class' : idx,'prediction':y_pred[200 * idx]})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "secondary-uniform",
    "metadata": {},
    "outputs": [],
    "source": []
