Added best model

--- a/Assignment 2/Fine-Tuning.ipynb
+++ b/Assignment 2/Fine-Tuning.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "systematic-means",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "different-genealogy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "million-ticket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +67,7 @@
     "\n",
     "def finetuneCNN(model_name, retrain):\n",
     "    base_model = eval(\n",
-    "        'applications' + model_name +\n",
+    "        'applications.' + model_name +\n",
     "        '(input_shape=max_shape, include_top=False, weights=\\'imagenet\\')')\n",
     "    base_model.trainable = True\n",
     "    non_train = int((1 - retrain) * len(base_model.layers))\n",
@@ -85,6 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "loved-lebanon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "painted-smooth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "median-offering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "operational-field",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,12 +169,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "lined-apache",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating a wandb agent\n",
     "\n",
     "wandb.agent(sweep_id, run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "documentary-great",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Best Model (Added after submission due to TA's request)\n",
+    "\n",
+    "best_model = finetuneCNN('ResNet50', 0.2)\n",
+    "best_model.compile(optimizer=tf.keras.optimizers.Nadam(), loss=tf.keras.losses.CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
+    "best_model.fit(ImageDataGenerator().flow_from_directory(\n",
+    "        train_path,\n",
+    "        class_mode='categorical'),epochs=10)\n",
+    "\n",
+    "# Predicting and calculating accuracy\n",
+    "y_pred_l = best_model.predict(test_generator)\n",
+    "y_pred = y_pred_l.argmax(axis=1)\n",
+    "y_true = np.array([np.zeros(200) + ii for ii in range(0, 10)]).flatten()\n",
+    "print((y_pred == y_true).sum() / 2000)"
    ]
   }
  ],
